sequel: УправДом v1.0.1.4 Интегрированы подсистемы - Работа с файлами. Создано расширение РаскрытиеГруппПрисоединенныхФайлоа.

--- a/УправДом/src/Catalogs/СоставСемьи/Forms/ФормаСписка/Form.form
+++ b/УправДом/src/Catalogs/СоставСемьи/Forms/ФормаСписка/Form.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form:Form xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:core="http://g5.1c.ru/v8/dt/mcore" xmlns:form="http://g5.1c.ru/v8/dt/form">
+<form:Form xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:core="http://g5.1c.ru/v8/dt/mcore" xmlns:form="http://g5.1c.ru/v8/dt/form" xmlns:schema="http://g5.1c.ru/v8/dt/data-composition-system/schema">
   <items xsi:type="form:FormGroup">
     <name>СписокКомпоновщикНастроекПользовательскиеНастройки</name>
     <id>1</id>
@@ -48,6 +48,56 @@
     <defaultItem>true</defaultItem>
     <titleLocation>None</titleLocation>
     <items xsi:type="form:FormField">
+      <name>ЕстьФайлы</name>
+      <id>56</id>
+      <visible>true</visible>
+      <enabled>true</enabled>
+      <userVisible>
+        <common>true</common>
+      </userVisible>
+      <dataPath xsi:type="form:DataPath">
+        <segments>Список.ЕстьФайлы</segments>
+      </dataPath>
+      <titleLocation>None</titleLocation>
+      <extendedTooltip>
+        <name>ЕстьФайлыРасширеннаяПодсказка</name>
+        <id>58</id>
+        <type>Label</type>
+        <autoMaxWidth>true</autoMaxWidth>
+        <autoMaxHeight>true</autoMaxHeight>
+        <extInfo xsi:type="form:LabelDecorationExtInfo">
+          <horizontalAlign>Left</horizontalAlign>
+        </extInfo>
+      </extendedTooltip>
+      <contextMenu>
+        <name>ЕстьФайлыКонтекстноеМеню</name>
+        <id>57</id>
+        <autoFill>true</autoFill>
+      </contextMenu>
+      <type>PictureField</type>
+      <editMode>EnterOnInput</editMode>
+      <showInHeader>true</showInHeader>
+      <headerPicture xsi:type="core:PictureRef">
+        <picture>CommonPicture.Скрепка</picture>
+      </headerPicture>
+      <headerHorizontalAlign>Left</headerHorizontalAlign>
+      <showInFooter>true</showInFooter>
+      <extInfo xsi:type="form:ImageFieldExtInfo">
+        <autoMaxWidth>true</autoMaxWidth>
+        <autoMaxHeight>true</autoMaxHeight>
+        <horizontalStretch>true</horizontalStretch>
+        <verticalStretch>true</verticalStretch>
+        <valuesPicture xsi:type="core:PictureRef">
+          <picture>CommonPicture.КоллекцияСкрепка</picture>
+        </valuesPicture>
+        <border xsi:type="core:BorderDef">
+          <style>Single</style>
+          <width>1</width>
+        </border>
+        <fileDragMode>AsFileRef</fileDragMode>
+      </extInfo>
+    </items>
+    <items xsi:type="form:FormField">
       <name>Код</name>
       <id>19</id>
       <visible>true</visible>
@@ -56,7 +106,7 @@
         <common>true</common>
       </userVisible>
       <dataPath xsi:type="form:DataPath">
-        <segments>Список.Code</segments>
+        <segments>Список.Код</segments>
       </dataPath>
       <extendedTooltip>
         <name>КодРасширеннаяПодсказка</name>
@@ -96,7 +146,7 @@
         <common>true</common>
       </userVisible>
       <dataPath xsi:type="form:DataPath">
-        <segments>Список.Description</segments>
+        <segments>Список.Наименование</segments>
       </dataPath>
       <extendedTooltip>
         <name>НаименованиеРасширеннаяПодсказка</name>
@@ -307,7 +357,7 @@
       <enabled>true</enabled>
       <userVisible/>
       <dataPath xsi:type="form:DataPath">
-        <segments>Список.Ref</segments>
+        <segments>Список.Ссылка</segments>
       </dataPath>
       <defaultItem>true</defaultItem>
       <extendedTooltip>
@@ -499,18 +549,159 @@
       <common>true</common>
     </edit>
     <notDefaultUseAlwaysAttributes xsi:type="form:DataPath">
-      <segments>Список.Ref</segments>
+      <segments>Список.Ссылка</segments>
     </notDefaultUseAlwaysAttributes>
     <main>true</main>
     <extInfo xsi:type="form:DynamicListExtInfo">
+      <queryText>ВЫБРАТЬ
+	ПрисоединенныеФайлы.ВладелецФайла КАК ВладелецФайла,
+	КОЛИЧЕСТВО(РАЗЛИЧНЫЕ ПрисоединенныеФайлы.Ссылка) КАК КоличествоФайлов
+ПОМЕСТИТЬ втКоличествоФайлов
+ИЗ
+	Справочник.СоставСемьиПрисоединенныеФайлы КАК ПрисоединенныеФайлы
+ГДЕ
+	НЕ ПрисоединенныеФайлы.ЭтоГруппа
+	И НЕ ПрисоединенныеФайлы.ПометкаУдаления
+СГРУППИРОВАТЬ ПО
+	ПрисоединенныеФайлы.ВладелецФайла
+;
+
+////////////////////////////////////////////////////////////////////////////////
+ВЫБРАТЬ
+	СоставСемьи.Ссылка КАК Ссылка,
+	СоставСемьи.ПометкаУдаления КАК ПометкаУдаления,
+	СоставСемьи.Код КАК Код,
+	СоставСемьи.Наименование КАК Наименование,
+	СоставСемьи.СемейныйСтатус КАК СемейныйСтатус,
+	СоставСемьи.Пол КАК Пол,
+	СоставСемьи.ДатаРождения КАК ДатаРождения,
+	СоставСемьи.УчитыватьВПлатежах КАК УчитыватьВПлатежах,
+	СоставСемьи.Комментарий КАК Комментарий,
+	СоставСемьи.ЛичныеДокументы.*,
+	СоставСемьи.Предопределенный КАК Предопределенный,
+	СоставСемьи.ИмяПредопределенныхДанных КАК ИмяПредопределенныхДанных,
+	ВЫБОР
+		КОГДА ЕСТЬNULL(втКоличествоФайлов.КоличествоФайлов, 0) > 0
+			ТОГДА 1
+		ИНАЧЕ 0
+	КОНЕЦ КАК ЕстьФайлы
+ИЗ
+	Справочник.СоставСемьи КАК СоставСемьи
+		ЛЕВОЕ СОЕДИНЕНИЕ втКоличествоФайлов КАК втКоличествоФайлов
+		ПО СоставСемьи.Ссылка = втКоличествоФайлов.ВладелецФайла</queryText>
       <mainTable>Catalog.СоставСемьи</mainTable>
       <dynamicDataRead>true</dynamicDataRead>
       <autoFillAvailableFields>true</autoFillAvailableFields>
+      <customQuery>true</customQuery>
       <autoSaveUserSettings>true</autoSaveUserSettings>
       <getInvisibleFieldPresentations>true</getInvisibleFieldPresentations>
+      <fields xsi:type="schema:DataCompositionSchemaDataSetField">
+        <dataPath>Ссылка</dataPath>
+        <field>Ссылка</field>
+      </fields>
+      <fields xsi:type="schema:DataCompositionSchemaDataSetField">
+        <dataPath>ПометкаУдаления</dataPath>
+        <field>ПометкаУдаления</field>
+      </fields>
+      <fields xsi:type="schema:DataCompositionSchemaDataSetField">
+        <dataPath>Код</dataPath>
+        <field>Код</field>
+      </fields>
+      <fields xsi:type="schema:DataCompositionSchemaDataSetField">
+        <dataPath>Наименование</dataPath>
+        <field>Наименование</field>
+      </fields>
+      <fields xsi:type="schema:DataCompositionSchemaDataSetField">
+        <dataPath>Предопределенный</dataPath>
+        <field>Предопределенный</field>
+      </fields>
+      <fields xsi:type="schema:DataCompositionSchemaDataSetField">
+        <dataPath>ИмяПредопределенныхДанных</dataPath>
+        <field>ИмяПредопределенныхДанных</field>
+      </fields>
+      <fields xsi:type="schema:DataCompositionSchemaDataSetField">
+        <dataPath>СемейныйСтатус</dataPath>
+        <field>СемейныйСтатус</field>
+      </fields>
+      <fields xsi:type="schema:DataCompositionSchemaDataSetField">
+        <dataPath>Пол</dataPath>
+        <field>Пол</field>
+      </fields>
+      <fields xsi:type="schema:DataCompositionSchemaDataSetField">
+        <dataPath>ДатаРождения</dataPath>
+        <field>ДатаРождения</field>
+      </fields>
+      <fields xsi:type="schema:DataCompositionSchemaDataSetField">
+        <dataPath>УчитыватьВПлатежах</dataPath>
+        <field>УчитыватьВПлатежах</field>
+      </fields>
+      <fields xsi:type="schema:DataCompositionSchemaDataSetField">
+        <dataPath>Комментарий</dataPath>
+        <field>Комментарий</field>
+      </fields>
+      <fields xsi:type="schema:DataCompositionSchemaDataSetField">
+        <dataPath>ЛичныеДокументы.Ссылка</dataPath>
+        <field>ЛичныеДокументы.Ссылка</field>
+      </fields>
+      <fields xsi:type="schema:DataCompositionSchemaDataSetField">
+        <dataPath>ЛичныеДокументы.НомерСтроки</dataPath>
+        <field>ЛичныеДокументы.НомерСтроки</field>
+      </fields>
+      <fields xsi:type="schema:DataCompositionSchemaDataSetField">
+        <dataPath>ЛичныеДокументы.Документ</dataPath>
+        <field>ЛичныеДокументы.Документ</field>
+      </fields>
+      <fields xsi:type="schema:DataCompositionSchemaDataSetField">
+        <dataPath>ЛичныеДокументы.Серия</dataPath>
+        <field>ЛичныеДокументы.Серия</field>
+      </fields>
+      <fields xsi:type="schema:DataCompositionSchemaDataSetField">
+        <dataPath>ЛичныеДокументы.Номер</dataPath>
+        <field>ЛичныеДокументы.Номер</field>
+      </fields>
+      <fields xsi:type="schema:DataCompositionSchemaDataSetField">
+        <dataPath>ЛичныеДокументы.ДатаВыдачи</dataPath>
+        <field>ЛичныеДокументы.ДатаВыдачи</field>
+      </fields>
+      <fields xsi:type="schema:DataCompositionSchemaDataSetField">
+        <dataPath>ЛичныеДокументы.КемВыдан</dataPath>
+        <field>ЛичныеДокументы.КемВыдан</field>
+      </fields>
+      <fields xsi:type="schema:DataCompositionSchemaNestedDataSet">
+        <dataPath>ЛичныеДокументы</dataPath>
+        <field>ЛичныеДокументы</field>
+      </fields>
+      <fields xsi:type="schema:DataCompositionSchemaDataSetField">
+        <dataPath>ЕстьФайлы</dataPath>
+        <field>ЕстьФайлы</field>
+        <title>
+          <localValue>
+            <content>
+              <key>ru</key>
+              <value>Есть файлы</value>
+            </content>
+          </localValue>
+        </title>
+      </fields>
+      <fields xsi:type="schema:DataCompositionSchemaDataSetField">
+        <dataPath>ПаспортИзображение</dataPath>
+        <field>ПаспортИзображение</field>
+      </fields>
+      <fields xsi:type="schema:DataCompositionSchemaDataSetField">
+        <dataPath>СвидОРождИзображение</dataPath>
+        <field>СвидОРождИзображение</field>
+      </fields>
+      <fields xsi:type="schema:DataCompositionSchemaDataSetField">
+        <dataPath>СНИЛСИзображение</dataPath>
+        <field>СНИЛСИзображение</field>
+      </fields>
+      <fields xsi:type="schema:DataCompositionSchemaDataSetField">
+        <dataPath>ИННИзображение</dataPath>
+        <field>ИННИзображение</field>
+      </fields>
       <calculatedFields>
         <dataPath>ВозрастРасчетный</dataPath>
-        <expression>РаботаСДатамиКлиентСервер.РассчитатьВозраст(ДатаРождения)</expression>
+        <expression>РаботаСДатамиКлиентСерверУД.РассчитатьВозраст(ДатаРождения)</expression>
         <title>
           <localValue>
             <content>
