sequel: УправДом v1.0.1.4 Реализован механизм вывода подписи и печати на печатных формах документов оплаты ком.услуг.

--- a/УправДом/src/CommonForms/Собственник/Form.form
+++ b/УправДом/src/CommonForms/Собственник/Form.form
@@ -51,7 +51,7 @@
       <common>true</common>
     </userVisible>
     <dataPath xsi:type="form:DataPath">
-      <segments>НаборКонстант.Адрес</segments>
+      <segments>НаборКонстант.АдресУД</segments>
     </dataPath>
     <extendedTooltip>
       <name>АдресРасширеннаяПодсказка</name>
